--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "prisma:init": "npx prisma init",
     "prisma:migrate": "npx prisma migrate dev",
     "prisma:generate": "npx prisma generate",
+    "prisma:seed": "node prisma/seed.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
