--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,15 @@
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
+    "i18next": "^25.7.3",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.561.0",
     "moment": "^2.30.1",
     "react": "^19.2.0",
     "react-datepicker": "^9.1.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^15.7.4",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.10.1",
     "recharts": "^3.6.0",
